# claude-voice

./: .gitignore  .mcp.json.example  ARCHITECTURE.md  FINAL_REPORT.md  LOCAL_VOICE_READY.md  README.md  benchmark_local_vs_api.py  demo_claude_code.py  demo_local_voice.py  demo_production.py  demo_quick.py  demo_test.py  pyproject.toml  requirements.txt  run_voice.py  setup_local_voice.py  test_claude_code_session.py  test_claude_session.sh  test_continue_flag.sh  test_corrected_session.py  test_integration_minimal.py  test_interactive.py  test_piper_jarvis.py  test_session_memory.sh  verify_continue.sh  voice.sh  voice_assistant.py
src/audio/: PRODUCTION_NOTES.md  __init__.py  capture.py  exceptions.py  normalize.py  types.py
src/core/: __init__.py  config.py  events.py  models.py  pipeline.py  providers.py  retry.py
src/llm/: __init__.py  chunker.py  chunker_fixed.py  claude_api.py  claude_code_session.py  claude_mcp.py  mock.py  protocol.py
src/stt/: __init__.py  mock.py  protocol.py  whisper.py  whisper_local.py
src/tts/: __init__.py  macos_say.py  mock.py  piper_tts.py  protocol.py
src/wake/: __init__.py  wake_word.py
test_harness/: __init__.py  runner.py  scenarios.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_audio_pipeline.py  test_local_pipeline.py
tests/unit/: test_chunker_edge_cases.py  test_models.py  test_providers.py  test_retry_and_rate_limit.py  test_stt_production.py
